refactor 좀 되라